attempting to added travis continuous integration

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Run
 0. bundle exec guard (coffeescript compiler)
 1. bundle exec rake jasmine (testing)
   note: jasmine is configured in spec/javascripts/support/jasmine.yml
+
+TODO: Add better way of exporting coffeescript for testing and javascript access
